<resources>
    <string name="app_name">FoodFinder</string>
    <string name="title_activity_maps">Food Trail</string>
    <string name="cardview_contents">Restaurant 1</string>
    <string name="cardview_takephoto">Take a <font fgcolor="#FFFFFFFF">Photo</font> of this restaurant.</string>
    <string name="cardview_entername">Enter a <font fgcolor="#FFFFFFFF">Name</font> for this trail.
    </string>
    <string name="cardview_radius_seekbar_text">Rate its Food: </string>
    <string name="cardview_elevation_seekbar_text">Rate its Service: </string>
    //Restaurant Display
    <string name="rest_name">Restaurant Name</string>
    <string name="rating">Rating</string>
    <string name="rating_num">Rating Number</string>
    <string name="Address">Address</string>
    <string name="Address_content">Address Content</string>

    //Sign in and Registration
    <string name="signin"><u>Click here to sign in</u></string>
    <string name="register"><u>Click here to register</u></string>

    //User Profile
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="action_settings">Settings</string>
    <string name="trail">User Trail</string>
    <string name="nav_up">Navigation Up Arrow</string>
    <string name="user_pic">User Profile Picture</string>

    //Trail display
    <string name="add_trail">Add to This One</string>
</resources>
