<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:layout_margin="50px">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70px"
        android:layout_marginBottom="70px">

        <TextView
            android:id="@+id/rest_name_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:padding="20px"
            android:textSize="50px"
            android:text="@string/rest_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/rating_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/rating"/>

            <TextView
                android:id="@+id/rating_num_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/rating_num"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/Address"/>

            <TextView
                android:id="@+id/address_content_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/Address_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70px"
        android:layout_marginBottom="70px">

        <TextView
            android:id="@+id/rest_name_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:padding="20px"
            android:textSize="50px"
            android:text="@string/rest_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/rating_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/rating"/>

            <TextView
                android:id="@+id/rating_num_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/rating_num"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/Address"/>

            <TextView
                android:id="@+id/address_content_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/Address_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70px"
        android:layout_marginBottom="70px">

        <TextView
            android:id="@+id/rest_name_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:padding="20px"
            android:textSize="50px"
            android:text="@string/rest_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/rating_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/rating"/>

            <TextView
                android:id="@+id/rating_num_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/rating_num"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/Address"/>

            <TextView
                android:id="@+id/address_content_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:padding="20px"
                android:text="@string/Address_content"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
