<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:layout_margin="50px">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trail_name"
        android:textSize="30dp"
        android:text="@string/trail"
        android:gravity="center"
        android:textColor="@android:color/holo_green_dark"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rest_image_1"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_foot_round"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rest_name_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20px"
                        android:padding="20px"
                        android:text="@string/rest_name"
                        android:textSize="50px"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/rating_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/rating"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/rating_num_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/rating_num"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/address_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/Address"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/address_content_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/Address_content"
                            android:visibility="invisible" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rest_image_2"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_foot_round"
                    android:visibility="invisible" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rest_name_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20px"
                        android:padding="20px"
                        android:text="@string/rest_name"
                        android:textSize="50px"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/rating_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/rating"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/rating_num_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/rating_num"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/address_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/Address"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/address_content_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/Address_content"
                            android:visibility="invisible" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rest_image_3"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_foot_round"
                    android:visibility="invisible" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rest_name_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20px"
                        android:padding="20px"
                        android:text="@string/rest_name"
                        android:textSize="50px"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/rating_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/rating"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/rating_num_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/rating_num"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/address_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/Address"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/address_content_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20px"
                            android:padding="20px"
                            android:text="@string/Address_content"
                            android:visibility="invisible" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>
